mysql-deploy.yml

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  # 策略
  strategy:
    type: Recreate  #停止旧版本部署新版本
  template: # 根据此模板创建
    metadata:
      labels:
        app: mysql-server
    spec:
      containers:
      - image: 192.168.21.122:5000/mysql55
        imagePullPolicy: IfNotPresent
        name: mysql-server
        ports:
        - containerPort: 3306
          name: mysql-server
        volumeMounts: #申请的存储挂载到这里
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-quest-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  #namespace: quests-staging-svc
spec:
  type: NodePort
  ports:
  - port: 3306
    protocol: TCP
  selector:
    app: mysql-server
