node-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    name: node-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-server
  template:
    metadata:
      labels:
        app: node-server
    spec:
      containers:
      - name: node-server
        image: node8
        imagePullPolicy: IfNotPresent #镜像存在的情况不去远程拉取
        ports:
        - containerPort: 8080

---
  
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    app: node-server
  ports:
  - port: 8080
    #targetPort: 9000
    protocol: TCP
